# game-engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: CopyFile.cmake
include/: app_window.h  material.h
resources/shaders/: mesh_basic_material.frag  mesh_basic_material.vert  mesh_basic_texture_material.frag  mesh_phong_material.frag  mesh_phong_material.vert  mesh_phong_texture_material.frag
src/: main.cpp
src/base/: app_window.cpp  app_window.h  core.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  scene.cpp  scene.h
src/camera/: camera.cpp  camera.h  perspective_camera.cpp  perspective_camera.h
src/camera/controls/: first_person_camera_control.cpp  first_person_camera_control.h
src/camera/interfaces/: camera_i.h
src/core/: app_window.cpp  camera.h  core.h  material.cpp  mesh.cpp  mesh.h  renderer.h  scene.cpp  scene.h  window.cpp  window.h
src/geometry/: basic_geometry.cpp  basic_geometry.h  box_geometry.cpp  box_geometry.h  geometry.cpp  geometry.h  plane_geometry.cpp  plane_geometry.h
src/geometry/interfaces/: geometry_i.h
src/material/: material.cpp  material.h  mesh_basic_material.cpp  mesh_basic_material.h  mesh_phong_material.cpp  mesh_phong_material.h
src/material/interfaces/: material_i.h
src/utilities/: ge_types.h  utilities.cpp  utilities.h
